# mp

./: CMakeLists.txt  README.rst
cmake/: nt2.mp.dependencies.cmake  nt2.mpfr.dependencies.cmake
include/mp/: domain.hpp  domain_fwd.hpp  evaluate.hpp  exp.hpp  expr.hpp  expr_fwd.hpp  fmod.hpp  grammar.hpp  grammar_fwd.hpp  mp.hpp  mp_fwd.hpp  mpfr.hpp  optimize.hpp  pow.hpp
include/mp/mpfr/: divides.hpp  exp.hpp  fma.hpp  fmod.hpp  fms.hpp  minus.hpp  mpfr.hpp  mpfr_fwd.hpp  multiplies.hpp  negate.hpp  plus.hpp  pow.hpp
include/nt2/sdk/mp/: domain.hpp  domain_fwd.hpp  expr.hpp  expr_fwd.hpp  float.hpp  float_fwd.hpp  grammar.hpp  grammar_fwd.hpp
include/nt2/sdk/mp/functor/: hierarchy.hpp
include/nt2/sdk/mp/meta/: hierarchy.hpp  semantic_of.hpp  terminal_of.hpp
include/nt2/sdk/mp/mpfr/: mpfr.hpp  tag.hpp  tag_fwd.hpp
include/nt2/toolbox/mp/: compute.hpp  dispatch.hpp  evaluate.hpp  float.hpp
mp/: CMakeLists.txt
mp/cmake/: nt2.mp.dependencies.cmake
mp/include/nt2/sdk/mp/: mpfr.hpp
mp/include/nt2/toolbox/mp/: calc.hpp  compute.hpp  dispatch.hpp  evaluate.hpp  float.hpp  hierarchy.hpp
mp/src/: CMakeLists.txt
mp/src/toolbox/mp/backend/: mpfr.cpp
mp/unit/: CMakeLists.txt  test.cpp  test2.cpp
mpfr/: CMakeLists.txt
mpfr/include/nt2/toolbox/: mpfloat.hpp
mpfr/include/nt2/toolbox/mpfloat/: mpfloat.hpp
mpfr/src/: CMakeLists.txt
mpfr/unit/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
src/mpfr/: mpfr.cpp
src/sdk/mp/mpfr/: mpfr.cpp
src/toolbox/mp/backend/: mpfr.cpp
unit/: CMakeLists.txt  test.cpp  test2.cpp
(+17 files in other folders)
